# Aegis-os

./: ARCHITECTURE.md  ARCHITECTURE_COMPLETION_REPORT.md  CLAUDE.md  CMakeLists.txt  COMPLETE_ARCHITECTURE.md  COMPLETION_SUMMARY.md  DEVELOPER_QUICK_START.md  DRIVER_INSTALLATION_GUIDE.md  HAL_DEVELOPER_GUIDE.md  HAL_QUICK_REFERENCE.md  IMPLEMENTATION_NEEDED_COMPLETE.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_2_QUICK_REFERENCE.md  PHASE_2_SUMMARY.md  PHASE_3_4_5_IMPLEMENTATION_SUMMARY.md  QUICK_PENDING_CHECKLIST.md  README.md  START_HERE_PENDING_ANALYSIS.md  SUMMARY_TABLE.md  build_rust_hal.bat
.zencoder/rules/: repo.md
arch/: CMakeLists.txt  boot.c  cpu.c
arch/arm/: CMakeLists.txt  context_switch.c  gic.c  irq.c  mm.c
arch/x86_64/: CMakeLists.txt  context_switch.c  gdt.c  idt.c  irq.c  mm.c
common/: CMakeLists.txt  bitmap.c  crypto.c  list.c  math.c  rbtree.c  string.c
devapi/: CMakeLists.txt  container_api.c  core_api.c  crypto_api.c  fs_api.c  network_api.c  sensor_api.c  ui_api.c
drivers/: CMakeLists.txt  driver_manager.c  gpu_driver.c  input_driver.c  network_driver.c  sensor_driver.c  storage_driver.c
filesystem/: CMakeLists.txt  access_control.c  file_encryption.c  file_indexing.c  journaling.c  metadata_engine.c  self_healing.c  snapshot_versioning.c
guide/: DELIVERABLES.md  EXAMPLE_DRIVER_NVMe.rs  HAL_ARCHITECTURE.md  HAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SESSION_REPORT.md  IMPLEMENTATION_SUMMARY.md  KERNEL_COMPONENTS_VERIFICATION.md  MASTER_PROJECT_SUMMARY.md  NEW_MODULES_REFERENCE.md  PENDING_TASKS_LIST.md  PHASES_6_9_IMPLEMENTATION_SUMMARY.md  PHASE_2_COMPLETION_REPORT.md  PROJECT_COMPLETION_DASHBOARD.md  QUICK_START_PHASES_6_9.md  RUST_HAL_MIGRATION_STATUS.md  SESSION_COMPLETION_REPORT.md  TEST_SUITE_DOCUMENTATION.md
guides/: 00-INDEX.md  ANALYSIS_COMPLETE.txt  CLAUDE.md  KERNEL_CHECKLIST_FINAL.md  PHASE_2_INDEX.md  PHASE_2_VERIFICATION_CHECKLIST.md  PROJECT_STATUS_DASHBOARD.md  PROJECT_SUMMARY.md  QUICK_START_PHASES_3_5.md  UPDATED_PENDING_TASKS.md  USERSPACE_MODULES.md
hal/: CMakeLists.txt  Cargo.toml  hal.c  hal_acpi_uefi.c  hal_audio.c  hal_cpu.c  hal_firmware.c  hal_gpu.c  hal_gpu_display.c  hal_power.c  hal_storage.c  hal_usb.c
hal/src/: acpi.rs  audio.rs  cpu.rs  error.rs  ffi.rs  firmware.rs  gpu.rs  lib.rs  power.rs  storage.rs  uefi.rs  usb.rs
include/devapi/: container_api.h  core_api.h  crypto_api.h  fs_api.h  network_api.h  sensor_api.h  ui_api.h
include/drivers/: driver_manager.h  gpu_driver.h  input_driver.h  network_driver.h  sensor_driver.h  storage_driver.h
include/filesystem/: access_control.h  file_encryption.h  file_indexing.h  journaling.h  metadata_engine.h  self_healing.h  snapshot_versioning.h
include/hal/: hal.h  hal_acpi_uefi.h  hal_audio.h  hal_cpu.h  hal_firmware.h  hal_gpu.h  hal_gpu_display.h  hal_power.h  hal_storage.h  hal_usb.h
include/kernel/: adaptive_scheduler.h  ai_prefetch.h  boot_params.h  debugger.h  driver.h  event_system.h  filesystem.h  gpu_acceleration.h  hypervisor.h  interrupt.h  ipc.h  ipc_bus.h  memory.h  network.h  panic.h  process.h  profiler.h  ram_compression.h  scheduler.h  security.h  syscalls.h  system_init.h  tiered_storage.h  types.h  universal_cache.h
include/security/: aegis_guard.h  aegis_shield.h  app_permissions.h  crypto_engine.h  hypervisor_protection.h  immutable_partitions.h  secure_boot.h  syscall_gatekeeper.h  zero_trust_ac.h
include/services/: audit_service.h  checkpoint_system.h  command_palette.h  logging_service.h  network_manager.h  neural_activity_monitor.h  package_manager.h  sandbox_manager.h  service_manager.h  session_manager.h  storage_manager.h  system_troubleshoot.h  (+3 more)
kernel/: CMakeLists.txt  adaptive_scheduler.c  advanced_features.c  advanced_features.h  ai_prefetch.c  arm_boot.c  arm_boot.h  boot_handoff.c  boot_handoff.h  boot_params.c  bootloader.c  bootloader.h  container_engine.c  container_engine.h  debugger.c  devfs.c  devfs.h  device_tree.c  device_tree.h  driver.c  event_system.c  filesystem.c  gpu_acceleration.c  hal_ffi.c  hal_ffi.h  hypervisor.c  integration_layer.c  integration_layer.h  interrupt.c  ipc.c  ipc_bus.c  kernel_image.c  main.c  memory.c  multiboot2.c  multiboot2.h  network.c  panic.c  perf_optimize.c  perf_optimize.h  (+19 more)
kernel/hal/acpi/: aml.rs  lib.rs  subsystem.rs  tables.rs
kernel/hal/audio/: device.rs  lib.rs  stream.rs  subsystem.rs
kernel/hal/block/: device.rs  lib.rs  partition.rs  subsystem.rs
kernel/hal/capability/: manager.rs  mod.rs  permissions.rs  token.rs
kernel/hal/cpu/: features.rs  lib.rs  pstate.rs  stats.rs  subsystem.rs  topology.rs
kernel/hal/device_node/: mod.rs
kernel/hal/driver/: callback.rs  descriptor.rs  device.rs  mod.rs  registry.rs
kernel/hal/gpu/: display.rs  framebuffer.rs  lib.rs  plane.rs  subsystem.rs
kernel/hal/include/: hal_driver.h
kernel/hal/power/: battery.rs  lib.rs  profiles.rs  states.rs  subsystem.rs
kernel/hal/uefi/: boot.rs  lib.rs  secure_boot.rs  subsystem.rs  variables.rs
kernel/hal/usb/: device.rs  hid.rs  lib.rs  subsystem.rs
security/: CMakeLists.txt  aegis_guard.c  aegis_shield.c  app_permissions.c  crypto_engine.c  hypervisor_protection.c  immutable_partitions.c  microkernel.c  secure_boot.c  syscall_gatekeeper.c  zero_trust_ac.c
services/: CMakeLists.txt  audit_service.c  checkpoint_system.c  command_palette.c  logging_service.c  network_manager.c  neural_activity_monitor.c  package_manager.c  sandbox_manager.c  service_manager.c  session_manager.c  storage_manager.c  system_troubleshoot.c  task_optimizer.c  update_manager.c  voice_commands.c
tests/: CMakeLists.txt  test_crypto_manual.c  test_devapi.c  test_drivers.c  test_filesystem.c  test_framework.h  test_implementation_needed.c  test_integration.c  test_kernel.c  test_main.c  test_phase3.c  test_phase6_extended.c  test_phase7_security.c  test_phase8_ui.c  test_phase9_advanced.c  test_profiler.c  test_security.c  test_service_manager_manual.c
userland/: CMakeLists.txt  aegis_shell.c  aegis_ui.c  aegis_ui_theme.c  app_runtime.c  app_store.c  settings_center.c
(+6 files in other folders)
